--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mr. Roboger's Neighborhood</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" type="image/x-icon" href="images/SC.png">
 </head> 
 <body>
-    <h1>Mr. Roboger's Neighborhood</h1>
+    <span class="header"></span>
+    <img alt="SC Logo and title" src="images/SCLogo w- TitleRobo.svg">
     <h2>Enter up to a 4 digit number in the text box provided below - there will then be an output which will count down from said number and depending on the output; different words will replace certain numbers.</h2>
+
+    <span class="sideBack"></span>
     <form id="form">
         <input type="text" id="input" maxlength="4" placeholder="Enter Number Here">
         <button type="submit">Submit</button>
     </form>
-    <div id="output">The output will appear here</div>
-
+    <div id="output"></div>
+    <p>The output will appear here</p>
     <script src="js/script.js"></script>
 </body>
 </html>
